<resources>
    <string name="app_name">ZoiMou</string>
    <string name="title_notes">Notes</string>
    <string name="title_todo">Todo</string>
    <string name="title_images">Memories</string>
    <string name="title_weather">Weather</string>
    <string name="create_title">Title</string>
    <string name="create_content">What\'s on your mind?</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="desc">Tap to see the details</string>
    <string name="title_delete_note">Delete Note</string>
    <string name="message_delete_note">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_add_notes">Add Note</string>
    <string name="title_edit_notes">Edit Note</string>
    <string name="note_add_success">Note Added!</string>
    <string name="note_warn">Please fill out your notes!</string>
    <string name="note_edit_success">Note Updated!</string>
    <string name="note_delete_success">Note Deleted!</string>
    <string name="no_notes_available">No notes created yet!</string>
    <string name="weather_location">Please Enable Your Location and Internet Connection</string>
    <string name="weather_date" translatable="false">Updated at: xx/xx/20xx xx:xx PM</string>
    <string name="weather" translatable="false">Clear</string>
    <string name="weather_desc" translatable="false">Clear Sky</string>
    <string name="weather_temp" translatable="false">31°C</string>
    <string name="feelslike" translatable="false">Feels Like 35°C</string>
    <string name="no_todos_available">No todos created yet!</string>
    <string name="your_todo">Your Todo</string>
    <string name="your_duetime">Deadline</string>
    <string name="title_delete_todo">Delete Your Todo</string>
    <string name="title_add_todo">Add Your Todo</string>
    <string name="title_edit_todo">Edit Your Todo</string>
    <string name="title_todo_confirmation">Confirmation</string>
    <string name="message_delete_todo">Are you sure you want to delete this todo?</string>
    <string name="message_delete_all_todo">Are you sure you want to delete all of your todos?</string>
    <string name="success_delete_todo">Delete todo success!</string>
    <string name="button_add_todo">Add Todo</string>
    <string name="warn_add_todo">Failed to add a todo, please fill all the input</string>
    <string name="button_edit_todo">Edit Todo</string>
    <string name="warn_edit_todo">Failed to edit a todo, please fill all the input</string>
    <string name="cancel">Cancel</string>
    <string name="todo_completed">Todo Completed!</string>
    <string name="message_done_todo">Are you done with this todo?</string>
    <string name="message_delete_all_notes">Are you sure you want to delete all of your notes?</string>
    <string name="error_permisson">\"You wont be able to access weather and memories feature\"</string>
    <string name="error_locaton">\"Please enable your location service\"</string>
    <string name="error_camera">unable to open camera</string>
    <string name="camera_captured">Image Captured</string>
    <string name="camera_cancelled">Capture Cancelled</string>
    <string name="error_get_weather">Error when gathering weather data:</string>
    <string name="images_load">Press Load to load Gallery</string>
    <string name="images_btn">Load</string>
    <string name="images_cam">Camera</string>
    <string name="no_todo">No Todo Created Yet!</string>
    <string name="title_permission_alert">Permission needed</string>
    <string name="title_connectivity_alert">No Network Connection</string>
    <string name="alert_connectivity">You wont be able to get weather data. To get weather data, please turn on the internet and restart the app</string>
    <string name="notification_title">There is an update in your weather info!</string>
    <string name="notification_text">The Weather data is updated! check it out</string>
    <string name="error_get_weather_data">Error when gathering weather data. it might be your connection or the API problem</string>
</resources>